# ncr-legal-assist-ai

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  README.md  SECURITY.md  SPECIFICATION-v1.md  pyproject.toml  run-tests.ps1  run.bat  run.ps1
.claude/skills/legal-citation-verifier/: SKILL.md
.claude/skills/primary-source-ingest/: SKILL.md
.claude/skills/wiki-lint/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  factual_correction.md  kb_article_review.md
.github/workflows/: ci.yml
docs/: agent-configuration.md
knowledge_base/: README.md  SCHEMA.md  index.md
knowledge_base/statutes/: dl-property-mutation.md  dl-rera-complaint-filing.md  dl-tenancy-deposit-recovery.md  dl-tenancy-rent-agreement.md  dl-tenancy-section-106-notice.md
raw_sources/: README.md
scripts/: build_index.py  download_models.py
src/: config.py
src/app/: streamlit_app.py
src/generation/: llm_client.py  ollama_client.py  prompts.py  verifier.py
src/indexing/: embeddings.py  vector_store.py
src/ingestion/: chunker.py  markdown_loader.py
src/retrieval/: hybrid_retriever.py  reranker.py
tests/: test_chunker.py  test_config.py  test_hybrid_retriever.py  test_markdown_loader.py  test_ollama_client.py  test_refusal.py  test_verifier.py
