[project]
name = "ncr-legal-assist"
version = "0.1.0"
description = "Research RAG system over Indian legal primary sources for Delhi NCR"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "torch>=2.4",
    "qdrant-client>=1.12",
    "rank-bm25>=0.2.2",
    "FlagEmbedding>=1.3",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "openai>=1.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
